--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,7 @@ body {
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
-#root {
-  max-width: 1280px;
-}
+
 .navbar {
   background-image: url("https://cdn.pixabay.com/photo/2021/01/21/15/54/books-5937716_1280.jpg");
   background-repeat: no-repeat;
@@ -23,6 +21,18 @@ body {
 }
 .navbar span {
   font-size: 10px;
+}
+h1 {
+  font-size: 1rem;
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-stretch: expanded;
+}
+.list-group-item {
+  font-size: 0.9rem;
+  border-bottom: 1px dashed rgb(225, 225, 225);
 }
 /* Responsive*/
 #contenedor-libros {
@@ -41,7 +51,7 @@ body {
 .GrillaProductos {
 }
 .card {
-  width: 70%;
+  width: 90%;
   object-fit: cover;
   border: none;
   text-align: center;
@@ -68,6 +78,7 @@ body {
   }
   #filtros {
     grid-area: filtros;
+    margin-right: 20px;
   }
   #libros {
     grid-area: libros;
