--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,45 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.navbar {
-  background-image: url("https://cdn.pixabay.com/photo/2021/01/21/15/54/books-5937716_1280.jpg");
+.header {
+  background-image: url("https://cdn.pixabay.com/photo/2016/11/29/12/50/bookcases-1869616_1280.jpg");
+  opacity: 0.9;
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   margin-bottom: 50px;
   padding-bottom: 40px;
+  height: 35vmin;
+}
+.navbar {
+  border-bottom: 1px solid rgb(176, 174, 174);
 }
 .navbar i {
   font-size: 25px;
   cursor: pointer;
+  color: white;
+}
+.navbar i:hover {
+  font-size: 25px;
+  cursor: pointer;
+  color: rgb(221, 217, 217);
+  text-shadow: 0px 0px 10px white;
+}
+#circuloCarro {
+  background-color: rgb(245, 164, 106);
 }
 .navbar span {
   font-size: 10px;
+}
+.navbar-brand,
+.navbar-brand:hover {
+  cursor: default;
+
+  opacity: 100%;
+  color: white;
+  font-size: 2rem;
 }
 h1 {
   font-size: 1rem;
@@ -33,6 +57,10 @@ h1 {
 .list-group-item {
   font-size: 0.9rem;
   border-bottom: 1px dashed rgb(225, 225, 225);
+}
+.list-group-item:hover {
+  cursor: pointer;
+  color: rgb(203, 142, 9);
 }
 /* Responsive*/
 #contenedor-libros {
@@ -67,8 +95,43 @@ h1 {
   font-weight: 700;
   color: chocolate;
 }
-#overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+.form-range {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+.form-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #000000;
+  cursor: pointer;
+}
+
+.form-range::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #000000;
+  cursor: pointer;
+}
+.btn-filtros,
+.btn-filtros:hover {
+  background-color: black;
+  color: white;
+  font-weight: thin;
+  font-size: 0.8rem;
+  border-radius: 0;
+}
+footer {
+  background-color: rgb(243, 245, 245);
 }
 
 @media (min-width: 768px) {
