--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,13 @@ body {
   background-color: rgb(244, 244, 244);
   color: rgb(245, 164, 106);
 }
+.btn-close-search {
+  color: white;
+  font-size: 1.5rem;
+}
+.input-group-text i {
+  cursor: pointer;
+}
 h1 {
   font-size: 1rem;
   border-bottom: 1px solid black;
