--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -1,8 +1,29 @@
 .form-control {
-  --bs-focus-ring-color: black;
-  --bs-focus-ring-width: 1px;
-  --bs-focus-ring-opacity: 1;
-  --bs-focus-ring-inset: 0;
-  --bs-focus-ring-offset-width: 0;
-  --bs-focus-ring-offset-color: #fff;
+  outline: 2px solid black;
+  border-radius: 3px;
+}
+
+#inputSearch {
+  color: #ebebeb;
+  background-color: black;
+  border: none;
+  border-radius: 0;
+  width: 93%;
+}
+#inputSearch::placeholder {
+  color: #ebebeb;
+}
+#inputSearch:focus-visible {
+  outline: 2px solid black;
+  border-radius: 2px;
+}
+#inputSearch:focus {
+  outline: 2px solid black;
+  border-radius: 2px;
+}
+.input-group-text {
+  color: #ebebeb;
+  background-color: black;
+  border: none;
+  --bs-focus-ring-width: 0;
 }
