--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,9 @@ h1 {
   cursor: pointer;
   color: rgb(203, 142, 9);
 }
+.divider {
+  border-bottom: 1px solid rgb(176, 174, 174);
+}
 /* Responsive*/
 #contenedor-libros {
   display: grid;
