add - modal x creacion y edicion de libro

--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -3,6 +3,10 @@
   cursor: pointer;
   text-align: center;
 }
+.input-adm {
+  outline: none;
+}
+
 /* cambia color switch*/
 .form-switch .form-check-input {
   line-height: 24px;
