--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,9 @@ body {
   color: rgb(221, 217, 217);
   text-shadow: 0px 0px 10px white;
 }
+#icono-lupa {
+  color: white;
+}
 #circuloCarro {
   background-color: rgb(245, 164, 106);
 }
@@ -58,7 +61,7 @@ body {
   background-color: rgb(244, 244, 244);
   color: rgb(245, 164, 106);
 }
-.btn-close-search {
+#btn-close-search {
   color: white;
   font-size: 1.5rem;
 }
