--- a/src/App.css
+++ b/src/App.css
@@ -76,17 +76,6 @@ h1 {
   font-weight: 700;
   font-stretch: expanded;
 }
-.list-group-item {
-  font-size: 0.9rem;
-  border-bottom: 1px dashed rgb(225, 225, 225);
-}
-.list-group-item:hover {
-  cursor: pointer;
-  color: rgb(203, 142, 9);
-}
-.divider {
-  border-bottom: 1px solid rgb(176, 174, 174);
-}
 a {
   color: black;
   text-decoration: none;
@@ -97,6 +86,22 @@ a:hover {
   cursor: pointer;
   text-shadow: 0px 0px 5px rgb(199, 197, 197);
 }
+.list-group-item {
+  font-size: 1rem;
+  border-bottom: 1px dashed rgb(225, 225, 225);
+}
+.link-filtros {
+  font-size: 1rem;
+}
+.link-filtros:hover {
+  cursor: pointer;
+  color: rgb(203, 142, 9);
+  text-shadow: none;
+}
+.divider {
+  border-bottom: 1px solid rgb(176, 174, 174);
+}
+
 /* Responsive*/
 #contenedor-libros {
   display: grid;
